Editing index.html and populating lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,7 +5,59 @@
         <title>lasagna</title>
     </head>
     <body>
+        <h4><a href="index.html">home</a></h4>
        <h1>lasagna</h1>
+        <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" />
+        <h2>ingredients</h2>
+        <ul>
+            <li>1 lb sweet Italian sausage</li>
+            <li>3/4 lb lean ground beef</li>
+            <li>1/2 cup minched onion</li>
+            <li>2 cloves garlic, crushed</li>
+            <li>28 oz crushed toamtoes</li>
+            <li>6.5 oz canned tomato sauce</li>
+            <li>6 oz tomato paste</li>
+            <li>1/2 cup water</li>
+            <li>2 tbsp white sugar</li>
+            <li>4 tbsp chopped fresh parsley, divided</li>
+            <li>1 1/2 tsp dried basil leaves</li>
+            <li>1 1/2 tsp salt, divided, or to taste</li>
+            <li>1 tsp Italian seasoning</li>
+            <li>1/2 tsp fennel seeds</li>
+            <li>1/4 tsp ground black pepper</li>
+            <li>12 lasagna noodles</li>
+            <li>16 oz ricotta cheese</li>
+            <li>1 egg</li>
+            <li>3/4 lb mozarella cheese, sliced</li>
+            <li>3/4 cup grated parmesan cheese</li>
+        </ul>
+        <br />
+        <h2>directions</h2>
+        <p><b>step 1</b></p>
+        <p>gather ingredients</p>
+        <p><b>step 2</b></p>
+        <p>cook sausage, ground beef, onion, and garlic in Dutch oven over medium heat until well browned</p>
+        <p><b>step 3</b></p>
+        <p>stir in crushed tomatoes, tomato sauce, tomato paste, and water. season with sugar, 2 tbsp of parsley,
+        basil, 1tsp salt, Italian season, fennel seeds, and pepper. simmer, covered, for about 1 1/2 hours, stirring occassionally</p>
+        <p><b>step 4</b></p>
+        <p>bring large pot of lightly salted water to boil. cook lasagna noodles in boiling water for 8-10mins. drain noodles, rinse with 
+        cold water.</p>
+        <p><b>step 5</b></p>
+        <p>in mixing bowl, combine ricotta cheese with egg, remaining 2 tbsp of parsley and 1/2 tsp salt</p>
+        <p><b>step 6</b></p>
+        <p>preheat oven to 375 degrees F</p>
+        <p><b>step 7</b></p>
+        <p>spread 1 1/2 cups of meat sauce in bottom of 9x13 inch baking dish. arrange 6 noodles lengthwise over meat sauce, overlapping slightly.
+        spread 1/2 ricotta cheese mixture. top with 1/3 of mozarella slices. spoon 1 1/2 cups meat sauce over mozarella, sprinkle with 1/4 cup parmasen
+        cheese.</p>
+        <p><b>step 8</b></p>
+        <p>repeat layers, top with remaining mozarella and parmesan cheese. cover with foil, and spray foil with cooking spray or make sure foil does
+        not touch cheese in order to prevent sticking.</p>
+        <p><b>step 9</b></p>
+        <p>bake in preheated oven for 25mins. remove foil and bake for additional 25mins</p>
+        <p><b>step 10</b></p>
+        <p>rest lasagna for 15mins before serving</p>
 
     </body>
 </html>
