--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <style>
+            ul{
+                color:indianred;
+            }
+            p{
+                color:coral;
+            }
+        </style>
         <meta charset="utf-8" >
         <title>lasagna</title>
     </head>
