--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,11 +5,11 @@
     <title>lasagna</title>
     <style>
         ul {
-            color: indianred;
+            color: #F94141;
         }
 
         p {
-            color: coral;
+            color: #F97841;
         }
     </style>
 
