--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>lasagna</title>
     <style>
+        * {
+            outline: 2px solid red;
+        }
         ul {
             color: #F94141;
         }
