--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,7 +5,7 @@
     <title>lasagna</title>
     <style>
         * {
-            outline: 2px solid red;
+            outline: 2px #4150F9;
         }
         ul {
             color: #F94141;
