--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,11 +9,14 @@
         }
         ul {
             color: #F94455;
-            flex: 1;
+           
         }
 
         p {
             color: #F97841;
+        }
+        .flex-container{
+            display: flex;
         }
     </style>
 
@@ -73,5 +76,9 @@
         <p><b>step 10</b></p>
         <p>rest lasagna for 15mins before serving</p>
 
+        <div class="flex-container">
+            <div class="one"></div>
+            <div class="two"></div>
+        </div>
     </body>
 </html>
