--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -15,8 +15,15 @@
         p {
             color: #F97841;
         }
+
         .flex-container{
             display: flex;
+        }
+        .flex-container div{
+            background: #C74B68;
+            border: 4px solid #DFA0AF;
+            height: 100px;
+            flex: 1 1 0%;
         }
     </style>
 
