--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -18,12 +18,14 @@
 
         .flex-container{
             display: flex;
+            margin-top: 20px;
         }
         .flex-container div{
             background: #C74B68;
             border: 4px solid #DFA0AF;
             height: 100px;
             flex: 1 1 0%;
+            margin: 10px;
         }
     </style>
 
