--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -19,6 +19,7 @@
         .flex-container{
             display: flex;
             margin-top: 20px;
+            flex_direction: column;
         }
         .flex-container div{
             background: #C74B68;
