space with flex

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -20,6 +20,7 @@
             display: flex;
             margin-top: 20px;
             flex_direction: column;
+            justify-content: space-between;
         }
         .flex-container div{
             background: #C74B68;
