--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -20,7 +20,7 @@
             display: flex;
             margin-top: 20px;
             flex_direction: column;
-            justify-content: space-between;
+            align-items: center;
         }
         .flex-container div{
             background: #C74B68;
